AquaticAlchemy/force-app/main/default/objects/Camp_Day__c/Camp_Day__c.object-meta.xml
<CustomObject>
    <label>Camp Day</label>
    <nameField>
        <label>Camp Day Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Camp Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>