AquaticAlchemy/force-app/main/default/objects/Camp_Day__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <label>Activities</label>
    <length>88</length>
    <type>Text</type>
</CustomField>