AquaticAlchemy/force-app/main/default/objects/Camp_Day__c/fields/End_Time_String__c.field-meta.xml
<CustomField>
    <fullName>End_Time_String__c</fullName>
    <label>End Time String</label>
    <length>20</length>
    <type>Text</type>
</CustomField>