AquaticAlchemy/force-app/main/default/objects/Camp_Day__c/fields/Public_Event__c.field-meta.xml
<CustomField>
    <fullName>Public_Event__c</fullName>
    <label>Public Event</label>
    <referenceTo>Public_Event__c</referenceTo>
    <relationshipLabel>Camp Days</relationshipLabel>
    <relationshipName>Camp_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>