AquaticAlchemy/force-app/main/default/objects/Camp_Day__c/fields/Start_Time_String__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_String__c</fullName>
    <label>Start Time String</label>
    <length>20</length>
    <type>Text</type>
</CustomField>